rework basics and appendix including todo notes and author names

--- a/doc/tex/basics.tex
+++ b/doc/tex/basics.tex
@@ -1,7 +1,10 @@
 \chapter{Grundlagen}
+\writtenby{\dcauthornameewie}%
+Im Folgenden sollen die diversen bildtechnischen Operationen beschrieben werden, die die Grundlage für die von uns entwickelten bzw. implementierten Verfahren bilden.
 
+\input{tex/basics/grayscale}
 \input{tex/basics/dilation}
-\input{tex/basics/connected-components}
-\input{tex/basics/convex-hull}
 \input{tex/basics/edge-detection}
 \input{tex/basics/segmentation}
+\input{tex/basics/connected-components}
+\input{tex/basics/convex-hull}
