--- a/doc/tex/basics/dilation.tex
+++ b/doc/tex/basics/dilation.tex
@@ -1,8 +1,7 @@
 \section*{Dilation}
-
+\writtenby{\dcauthornameewie}%
 % Erosion und Dilation, Öffnen und Schliessen
 % aus Voss & Süße 1991
-
 Die Dilatation ist eine morphologische Operation um Strukturen eines Bildes zu vergrößern.
 Für die Dilation eines Grauwertbildes wird jedem Pixel der Maximalwert aller Pixel innerhalb einer gewissen Umgebung zugewiesen.
 Für die Beschreibung der Umgebung verwendet man ein Strukturelement fester Größe und Form (z.B. ein 3$\times$3 Quadrat).
