--- a/doc/tex/basics/convex-hull.tex
+++ b/doc/tex/basics/convex-hull.tex
@@ -1,12 +1,12 @@
 \section*{Konvexe Hülle}
-
+\writtenby{\dcauthornameewie}%
 Als konvexe Hülle einer Punktmenge $M$ bezeichnet man das minimale konvexe Polygon, welches sämtliche Punkte aus $M$ enthält.
 Für die Berechnung der konvexen Hülle aus einer Menge von Punkten existieren diverse Alogirthmen.
-Ein simpler Algorithmus ist \textsc{Andrew}'s Monotone Chain \cite{compgeom2008}.
+Ein simpler Algorithmus ist \textsc{Andrew}'s Monotone Chain  \cite[6--7]{compgeom2008}.
 Dazu werden zwei "`halbe"' Hüllen erstellt, die obere Hülle $U$ und untere Hülle $L$.
-Die obere Hülle wird erzeugt indem über alle Punkte der Menge $M$ entsprechend der lexikografischen Ordnung
-  \[ (x,y) < (u, v) \Longleftrightarrow x < u \vee x = u \wedge y < v \]
-iteriert, und wiederholt das letzte Element in $U$ entfernt wird solange $U$ mindestens 2 Punkte enthält und die letzten 2 Punkte zusammen mit dem aktuell betrachteten Punkt \emph{keine} Rechtskurve bilden.
+Die obere Hülle wird erzeugt indem über alle Punkte der Menge $M$ entsprechend ihrer lexikografischen Ordnung\footnote{
+  \( (x,y) < (u, v) \Longleftrightarrow x < u \vee x = u \wedge y < v \)
+} iteriert, und wiederholt das letzte Element in $U$ entfernt wird solange $U$ mindestens 2 Punkte enthält und die letzten 2 Punkte zusammen mit dem aktuell betrachteten Punkt \emph{keine} Rechtskurve bilden.
 Anschließend wird der aktuelle Punkt ans Ende von $U$ eingefügt.
 Die Erzeugung der unteren Hülle $L$ erfolgt analog $U$, jedoch unter Betrachtung der Punkte in umgekehrter Reihenfolge.
 Zudem \emph{müssen} die letzten 2 Punkte zusammen mit dem aktuell betrachteten Punkt eine Rechtskurve bilden.
