change \writtenby to not draw a line

--- a/doc/document.tex
+++ b/doc/document.tex
@@ -80,7 +80,7 @@
 }
 
 \newcommand{\writtenby}[1]{%
-  \todo[nolist,inline,color=yellow!50]{#1}\noindent%
+  \todo[nolist,noline,color=yellow!50]{#1}\noindent%
 }
 
 %\pagestyle{scrheadings}
