Lots of changes in structure and content.

--- a/doc/tex/barcodes.tex
+++ b/doc/tex/barcodes.tex
@@ -1,4 +1,6 @@
-\chapter{Die Strichcodes}
+\chapter{Strichcodes}
+\writtenby{\dcauthornameriren}%
+In diesem Kapitel werden erst einige Strichcodes etwas genauer beschrieben und anschließend einige Strichcodegeneratoren und -erkenner vorgestellt.
 
 \input{tex/barcodes/thecodes}
 \input{tex/barcodes/libraries}
