--- a/doc/tex/barcodes/thecodes.tex
+++ b/doc/tex/barcodes/thecodes.tex
@@ -1,6 +1,8 @@
 \section{Einige Strichcodes}
+\writtenby{\dcauthornameriren}%
+Um die eigentliche Aufgabe etwas genauer zu beleuchten, werden hier 2 unterschiedliche Strichcodearten repräsentativ vorgestellt und ihr Aufbau genauer untersucht.
 
 \input{tex/barcodes/thecodes/code39}
-\input{tex/barcodes/thecodes/code128}
-\input{tex/barcodes/thecodes/ean}
+%\input{tex/barcodes/thecodes/code128}
+%\input{tex/barcodes/thecodes/ean}
 \input{tex/barcodes/thecodes/qr}
