--- a/doc/tex/classes.tex
+++ b/doc/tex/classes.tex
@@ -1,7 +1,11 @@
 \chapter{Implementierung}
+\writtenby{\dcauthornameriren}%
 In diesem Kapitel werden Ausschnitte aus der Implementation beschrieben, um einen einfachen Überblick über die Funktionen zu bekommen.
 
 Dabei wird nicht jede einzelne Funktion aufgeführt, sondern nur die wichtigsten für die korrekte Verarbeitung.
 
+Am Ende des Kapitels werden dann die genutzten/benötigten Bibliotheken beschrieben.
+
 \input{tex/classes/imageprocessing}
 \input{tex/classes/improveimage}
+\input{tex/classes/usedlibraries}
