--- a/doc/tex/evaluation/ip.tex
+++ b/doc/tex/evaluation/ip.tex
@@ -1,8 +1,10 @@
-\section{Nach Bildverarbeitung}
-Trotzdem die Bibliothek ZXing bereits einen großen Funktionsumfang bereit stellt, enthält sie nichtsdestotrotz Schwachpunkte. Diese werden vor allem bei starker Unschärfe, starken Rotationen, Schatten und Schrägen sichtbar.
+\section{Nach der Bildaufbereitung}
+\writtenby{\dcauthornameriren}%
+Trotzdem die Bibliothek ZXing bereits einen großen Funktionsumfang bereit stellt, enthält sie nichtsdestotrotz Schwachpunkte. Diese werden vor allem bei starker Unschärfe, starken Rotationen und Schatten sichtbar.
 Bei der Aufbereitung der Codes wurde daher auf diese Punkte ein besonderes Augenmerk gelegt.
 
 \subsection*{Unschärfe}
+\todo{Beschreibung fehlt noch}
 
 
 
@@ -16,8 +18,9 @@ Problematisch ist es nur, wenn ein Strichcode um 90$ \circ $ gedreht ist, da dan
 
 
 \subsection*{Schatten}
+\todo{Beschreibung fehlt noch}
 
 
 
-\subsection*{Schrägen}
+%\subsection*{Schrägen}
 
