--- a/doc/tex/evaluation/zxing/qr.tex
+++ b/doc/tex/evaluation/zxing/qr.tex
@@ -1,6 +1,7 @@
 \subsection*{QR-Code}
+\writtenby{\dcauthornameriren}%
 Im Allgemeinen werden QR-Codes sehr gut erkannt, was natürlich vor allem daher kommt, dass sie extra so konstruiert wurden relativ fehlertolerant zu sein.
-AUFLÖSUNG EINFÜGN!!!
+\todo{Auflösung einfügen!}
 
 % normale
 Jegliche Größe ist möglich und durch die hohe Fehlertoleranz werden selbst verschmutzte Codes und Codes mit integrierten Bildern ohne Probleme dekodiert, wie in Abbildung \ref*{fig:qrnormal} zu sehen ist.
@@ -55,7 +56,7 @@ Die allgemeine Dunkelheit des Bildes, durch die der Kontrast sinkt, scheint kaum
 % \textbf{Bilder einfügen, dark98, dark99f, darkface90, darkface95f, blurrydark75, blurrydark80f, blurrydarkrotate90, blurrydarkrotate95f }
 
 % schatten
-SCHATTEN
+\todo{SCHATTEN}
 
 % schräg
-SCHRÄG
+%SCHRÄG
