--- a/doc/tex/appendix/xml-schema.tex
+++ b/doc/tex/appendix/xml-schema.tex
@@ -1,3 +1,3 @@
 \chapter{XML Schema}
 \writtenby{\dcauthornameewie}%
-\lstinputlisting[language=XSD]{../core/etc/barcd.xsd}
+\lstinputlisting[language=XSD]{../barcd-core/etc/barcd.xsd}
