--- a/doc/tex/basics.tex
+++ b/doc/tex/basics.tex
@@ -8,3 +8,5 @@ Im Folgenden sollen die diversen bildtechnischen Operationen beschrieben werden,
 \input{tex/basics/segmentation}
 \input{tex/basics/connected-components}
 \input{tex/basics/convex-hull}
+
+\input{tex/basics/filter}
