exclude acknowledgement and abstract from document

--- a/doc/tex/title.tex
+++ b/doc/tex/title.tex
@@ -51,24 +51,24 @@
 
 \maketitle
 
-\thispagestyle{empty}
-\null\vfil
-\begin{center}
-\usekomafont{sectioning}\textbf{Danksagung}
-\vspace{-.5em}\vspace{\parsep}
+%\thispagestyle{empty}
+%\null\vfil
+%\begin{center}
+%\usekomafont{sectioning}\textbf{Danksagung}
+%\vspace{-.5em}\vspace{\parsep}
 %%
 %% TODO
 %%
-\end{center}
-\par\vfil\null
-\cleardoubleemptypage
-  
-\def\abstractname{Abstract}
-\begin{abstract}
+%\end{center}
+%\par\vfil\null
+%\cleardoubleemptypage
+%
+%\def\abstractname{Abstract}
+%\begin{abstract}
 %%
 %% TODO
 %%
-\end{abstract}
+%\end{abstract}
 
 \cleardoubleemptypage
 \pagenumbering{roman}
