add meta \dcpruefer

--- a/doc/tex/meta.tex
+++ b/doc/tex/meta.tex
@@ -17,7 +17,7 @@
 \newcommand{\dcdepart}{Informatik}
 \newcommand{\dcprof}{Medieninformatik}
 
-\newcommand{\dcpruefer}{}
+\newcommand{\dcpruefer}{Prof. Dr. Maximilian Eibl}
 \newcommand{\dcadvisor}{Robert Manthey}
 
 \newcommand{\dckeywords}{}
