rework section about grayscaling include a mathematical proof for division by right shifting

--- a/doc/document.tex
+++ b/doc/document.tex
@@ -29,6 +29,7 @@
 \usepackage{aecompl}
 \usepackage{amsfonts}
 \usepackage{amsmath}
+\usepackage{amssymb}
 \usepackage[ngerman]{babel}
 \usepackage{calc}
 \usepackage{color}
@@ -82,6 +83,8 @@
 \newcommand{\writtenby}[1]{%
   \todo[nolist,noline,color=yellow!50]{#1}\noindent%
 }
+
+\newcommand{\qedsymbol}{\ensuremath{\blacksquare}}
 
 %\pagestyle{scrheadings}
 %\setkomafont{pagehead}{\small\scshape}
