include subsections within section basics in toc

--- a/doc/tex/basics/connected-components.tex
+++ b/doc/tex/basics/connected-components.tex
@@ -1,4 +1,4 @@
-\section*{Connected Components Labeling}
+\section{Connected Components Labeling}
 \writtenby{\dcauthornameewie}%
 Um zusammenhängende Bildstrukturen zu erfassen verwendet man dass sogenannte Connected Components Labeling.
 Dabei wird jeder Bildpunkt genau einer Menge zugeordnet welche je eine Komponente zusammenhängenger Bildpunkte repräsentiert.
