--- a/doc/tex/basics/convex-hull.tex
+++ b/doc/tex/basics/convex-hull.tex
@@ -1,4 +1,4 @@
-\section*{Konvexe Hülle}
+\section{Konvexe Hülle}
 \writtenby{\dcauthornameewie}%
 Als konvexe Hülle einer Punktmenge $M$ bezeichnet man das minimale konvexe Polygon, welches sämtliche Punkte aus $M$ enthält.
 Für die Berechnung der konvexen Hülle aus einer Menge von Punkten existieren diverse Alogirthmen.
