--- a/doc/tex/basics/dilation.tex
+++ b/doc/tex/basics/dilation.tex
@@ -1,4 +1,4 @@
-\section*{Dilation}
+\section{Dilation}
 \writtenby{\dcauthornameewie}%
 % Erosion und Dilation, Öffnen und Schliessen
 % aus Voss & Süße 1991
