--- a/doc/tex/basics/filter.tex
+++ b/doc/tex/basics/filter.tex
@@ -1,4 +1,4 @@
-\section*{Filterprozesse}
+\section{Filterprozesse}
 \writtenby{\dcauthornameriren}%
 Für viele Bildverarbeitungsprozesse werden Filter genutzt, die sich z.B. der mathematischen Faltung bedienen, um Rauschen zu entfernen, Kanten zu schärfen oder auch Kanten zu erkennen. Die wichtigsten der zur Verbesserung der Bildqualität genutzten Filter, werden hier kurz erläutert.
 
