--- a/doc/tex/basics/grayscale.tex
+++ b/doc/tex/basics/grayscale.tex
@@ -1,4 +1,4 @@
-\section*{Graustufen}
+\section{Graustufen}
 \writtenby{\dcauthornameewie}%
 Im Allgemeinen liegen Bilddaten in Farbe vor.
 Sind für die Analyse jedoch Strukturen entscheidend, welche sich durch Helligkeitunterschiede ergeben, so ist es nötig diese Helligkeitsinformation aus den Farbbildern zu extrahieren.
