--- a/doc/tex/basics/segmentation.tex
+++ b/doc/tex/basics/segmentation.tex
@@ -1,4 +1,4 @@
-\section*{Segmentierung}
+\section{Segmentierung}
 \writtenby{\dcauthornameewie}%
 Die Segmentierung findet Anwendung bei der Klassifizierung von Bildelementen.
 Dabei wird jedes Pixel anhand eines Kriteriums einer Klasse zugeordnet.
@@ -27,17 +27,17 @@ Es existieren verschiedene Varianten der Anwendung das Schwellwertverfahrens.
 
 \todo[author=\dcauthornameewie]{ausführlicher}
 
-\paragraph{Globales Thresholding}
+\subsubsection*{Globales Thresholding}
 Der Schwellwert wird für das gesamte Bild einmalig berechnet und auf alle Bildpunkte angewandt.
 Die Verwendung eines einzelnen Schwellwertes für das gesamte Bild funkioniert nur sofern das Bild gleichmäßtig Belichtet ist.
 Ansonsten kann es vorkommen, dass Bildteile die zu gering belichtet sind unterhalb des Schwellwertes liegen und somit als Hintergrund klassifiziert werden.
 
-\paragraph{Lokales Thresholding}
+\subsubsection*{Lokales Thresholding}
 Unterteilt das Bild in disjunkte Regionen und ermittelt jeweils einen eigenen Schwellwert, mit dem der jeweilige Bereich segmentiert wird.
 Die negativen Effekte des globalen Thresholding auf das Gesamtbild werden vermieden, können innerhalb einer Region aber dennoch auftreten.
 Wodurch es an den Regionsgrenzen zu unterschiedlichen Klassifikationen kommen kann.
 
-\paragraph{Dynamisches Thresholding}
+\subsubsection*{Dynamisches Thresholding}
 Ermittelt für jeden Bildpunkt einen Schwellwert unter Betrachtung der Umgebung des Bildpunktes.
 Anhand des Schwellwertes wird der Bildpunkt einer Klasse zugeordnet.
 Vermeidet die Fehler durch ein ungleiche Beleuchtung, wenn eine Pixelumgebung gewählt werden kann, die einer gleichmäßigen Beleuchtung unterliegt.
@@ -46,23 +46,23 @@ Vermeidet die Fehler durch ein ungleiche Beleuchtung, wenn eine Pixelumgebung ge
 Da die Wahl des Schwellwertes ausschlaggebend für die Genauigkeit der Klassifizierung ist, existieren diverse Algorithmen.
 Diese machen sich zum Teil bestimmte Eigenschaften eines Bildes zu nutze und sind daher nur für eine bestimmte Klasse von Bildern geeignet, nämlich solche die jene Eigenschaften erfüllen.
 
-\paragraph{Mittelwert}
+\subsubsection*{Mittelwert}
 Nutzt den Mittelwert der Helligkeit aller Bildpunkte als Schwellwert.
 Das ermittelte Schwellwert ist sinnvoll, wenn sich Bildelemente durch ihre Helligkeits bereits deutlich vom Hintergrund abheben.
 Im Allgemeinen ist der Mittelwert jedoch nicht optimal da dieser die Helligkeitsverteilung der Bildpunkte nicht berücksichtigt.
   \[ t = \frac{1}{N} \sum_{x,y} I(x,y), \quad N = \sum_{x,y} 1 \]
 %%\todo[author=Erik]{Mittelwert Vor- \& Nachteile}
 
-\paragraph{Iteratives Verfahren}
+\subsubsection*{Iteratives Verfahren}
 \ldots
 
 \todo[author=\dcauthornameewie]{Iteratives Verfahren}
 
-\paragraph{Otsu's Method}
+\subsubsection*{Otsu's Method}
 \textsc{Otsu}'s Method ist ein histogrammbasiertes Verfahren, dass eine bimodale Helligkeitsverteilung\footnote{Eine bimodale Helligkeitsverteilung besitzt zwei Maxima die den Helligkeitswerten des Hintergrund bzw. Vordergrund entsprechen. Der optimale Schwellwert liegt im Tal zwischen den Maxima.} voraussetzt.
 Der Algorithmus sucht den Schwellwert, der die Varianz innheralb der beiden Klassen minimiert.
 
-\paragraph{Balanced Histogram Thresholding}
+\subsubsection*{Balanced Histogram Thresholding}
 Das Balanced Histogram Thresholding erwartet, wie \textsc{Otsu}'s Method, eine bimodale Helligkeitsverteilung.
 Das Verfahren ermittelt den Schwellwert derart, dass dieser das Histogramm in zwei gleich "`schwere"' Hälften teilt.
 Als Maß für das Gewicht einer Hälfte dient die Summe der absoluten Häufigkeiten aller Klassen der betrachteten Hälfte.
