fix writing style in basics

--- a/doc/tex/basics.tex
+++ b/doc/tex/basics.tex
@@ -1,6 +1,6 @@
 \chapter{Grundlagen}
 \writtenby{\dcauthornameewie}%
-Im Folgenden sollen die diversen bildtechnischen Operationen beschrieben werden, die die Grundlage für die von uns entwickelten bzw. implementierten Verfahren bilden.
+Im Folgenden sollen die diversen bildtechnischen Operationen beschrieben werden, die die Grundlage für die entwickelten und implementierten Verfahren bilden.
 
 \input{tex/basics/grayscale}
 \input{tex/basics/dilation}
