add citations in section grayscaling

--- a/doc/literature.bib
+++ b/doc/literature.bib
@@ -67,3 +67,32 @@
   number    = {4},
   pages     = {326--337}
 }
+
+@techreport{jfif,
+  author    = {Eric Hamilton},
+  title     = {JPEG File Interchange Format},
+  institution = {Joint Photographic Experts Group},
+  year      = {1992},
+  month     = sep,
+  url       = {http://www.jpeg.org/public/jfif.pdf}
+}
+
+@techreport{itu/rec/601,
+  author    = {ITU},
+  title     = {Studio encoding parameters of digital television for standard 4:3 and wide-screen 16:9 aspect ratios},
+  institution = {ITU-R},
+  numbers   = {ITU-R BT.601-7},
+  year      = {2011},
+  month     = mar,
+  url       = {http://www.itu.int/dms_pubrec/itu-r/rec/bt/R-REC-BT.601-7-201103-I!!PDF-E.pdf}
+}
+
+@techreport{itu/rec/709,
+  author    = {ITU},
+  title     = {Parameter values for the HDTV standards for production and international programme exchange},
+  institution = {ITU-R},
+  numbers   = {ITU-R BT.709-5},
+  year      = {2002},
+  month     = apr,
+  url       = {http://www.itu.int/dms_pubrec/itu-r/rec/bt/R-REC-BT.709-5-200204-I!!PDF-E.pdf}
+}
