--- a/doc/tex/basics/grayscale.tex
+++ b/doc/tex/basics/grayscale.tex
@@ -7,22 +7,19 @@ Zunächst ist es entscheiden, in welchem Format die Bilder vorliegen, d.h. wie d
 Die zwei gängigsten Formate sind RGB und YCbCr.
 RGB kodiert Farbwerte mit 3 Komponenten die den Farbkanälen Rot (R), Grün (G), und Blau (B) entsprechen.
 Im Gegensatz dazu stellt YCbCr die Farbinformation mit den 3 Komponenten Helligkeit (Y'), Blau-Gelb-Chrominanz (Cb), sowie Rot-Grün-Chrominanz (Cr).
-YCbCr findet Anwendung in JPEG und MPEG zu Komprimierung der Bilddaten.
-\todo{Quelle}
+YCbCr findet Anwendung in JPEG/JFIF \cite{jfif} zur Farbkodierung.
 
 Liegen die Bilddaten in YCbCr vor, da z.B. mit Videos in MPEG gearbeitet wird, bietet es sich an die kodierte Helligkeit Y direkt zu verwenden, da diese sich an der menschlichen Helligkeitswahrnehmung orientiert.
 
 Liegt jedoch RGB vor, so muss die Helligkeit explizit ermittelt werden.
 Zum einen kann man Y so berechnen wie dies bei Umwandlung von RGB in YCbCr standardmäßig erfolgt.
-Nämlich nach folgender Formel.
-\todo{Quelle}
+Nämlich nach folgender Formel \cite[2.5.1]{itu/rec/601}.
   \[ Y = K_R R + (1 - K_R - K_B) G + K_B B \]
 Für die Werte $K_R$ und $K_B$ gibt es zwei Standards ITU-R BT.601 (SDTV) und ITU-R BT.709 (HDTV).
-\todo{Quelle}
 %
 \begin{itemize}
-\item ITU-R BT.601: $K_R=0.114,~K_B=0.299$
-\item ITU-R BT.709: $K_R=0.0722,~K_B=0.2126$
+\item ITU-R BT.601: $K_R=0.299,~K_B=0.114$ \cite[2.5.1]{itu/rec/601}
+\item ITU-R BT.709: $K_R=0.2126,~K_B=0.0722$ \cite[4]{itu/rec/709}
 \end{itemize}
 %
 Soll die Konvertierung möglichst schnell erfolgen wird auch auf eine einfachere Variante zurückgegriffen\footnote{\href{https://code.google.com/p/zxing/source/browse/trunk/core/src/com/google/zxing/RGBLuminanceSource.java?spec=svn2633&r=2394\#57}{RGBLuminanceSource.java r2394 L57 (code.google.com/p/zxing)}}, welche die Komponente $G$, im Vergleich zu $R$ und $B$, doppelt gewichtet.
