fix month in BibTeX

--- a/doc/literature.bib
+++ b/doc/literature.bib
@@ -63,7 +63,7 @@
   title     = {The Surveyor's Area Formular},
   journal   = {The College Mathematics Journal},
   year      = {1986},
-  month     = {September},
+  month     = sep,
   number    = {4},
   pages     = {326--337}
 }
